fix: button text alignment, fieldset spacing, pointer events

--- a/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Experience.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Experience.module.scss
@@ -21,10 +21,12 @@
 
 .experience svg {
   fill: var(--cds-icon-02);
+  pointer-events: none;
 }
 
 .experience span {
   position: absolute;
+  pointer-events: none;
   top: $spacing-03;
   left: $spacing-03;
 }
