--- a/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Form.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/FeedbackDialog/Form.module.scss
@@ -22,7 +22,7 @@
   @include carbon--type-style('label-01');
 }
 
-.form-container legend {
+.form-container fieldset {
   margin-top: $spacing-05;
 }
 
@@ -35,11 +35,11 @@
   width: 100%;
   display: flex;
   flex-wrap: nowrap;
-  height: 4rem;
 }
 
-.buttonRow button {
-  // width: 50%;
+.button {
+  height: 4rem;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
   flex-grow: 1;
-  align-items: flex-start;
 }
